item not found message

--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
 
 
     <div class="custom btn">
-      <button type="button" onclick="visualize()">Start Animation</button>
+      <button type="button" onclick="visualize()" id="btn">Start Animation</button>
     </div>
   </div>
 
