--- a/index.html
+++ b/index.html
@@ -13,26 +13,27 @@
         <div class="custom select-algo">
             <label for="cars">Choose an Algorithm:</label>
 
-            <select id="algo-options" onchange="algoChange()">
-        <option value="1">Bubble Sort</option>
-        <option value="2">Selection Sort</option>
-        <option value="3">Linear Search</option>
-        <option value="4">Binary Search</option>
-      </select>
+            <select id="algo-options" onchange="algoChange()" placeholder="Sellect algorith">
+                <option value="1">Bubble Sort</option>
+                <option value="2">Selection Sort</option>
+                <option value="3">Linear Search</option>
+                <option value="4">Binary Search</option>
+            </select>
         </div>
 
 
         <div class="custom  select-size">
             <label for="fname">Array Size</label>
-            <input type="number" id="array-size" onchange="sizeChange()" value="5">
+            <input type="number" id="array-size" placeholder="Enter array size" onchange="sizeChange()" value="5">
         </div>
 
         <div class="custom" id="search-element">
             <label for="fname">Search Element</label>
-            <input type="number" id="search-box" disabled>
+            <input type="number" id="search-box" placeholder="Enter number to search" disabled>
         </div>
 
-
+    </div>
+    <div>
 
 
         <div class="custom btn">
