--- a/index.html
+++ b/index.html
@@ -32,6 +32,11 @@
             <input type="number" id="search-box" placeholder="Enter number to search" disabled>
         </div>
 
+        <div class="custom">
+            <label for="points">Speed</label>
+            <input type="range" id="speed" min="10" max="100" onchange="speedChange()">
+        </div>
+
     </div>
     <div>
 
